exp shortened month

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -67,11 +67,11 @@
                     <h3>Company <img class='float-end' src="../pics/lenovainc_logo.gif" alt="LeNova Logo"></h3><h5>LeNova, Inc. <a href="https://www.lenovainc.com/" target="_blank">Website</a></h5>
                 </div>
                 <div class="col-sm-4">    
-                    <h3>Timeframe</h3><h5>January 2022 to July 2022</h5>
+                    <h3>Timeframe</h3><h5>Jan 2022 to Jul 2022</h5>
                 </div>
             </div>
             <div>
-                <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Web Developer</span><span style="color:gray;">(Contract)</span>
+                <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Web Developer</span>
             </div>
             <div>
                 <span class="h3">Description</span>
@@ -93,7 +93,7 @@
                     <h3>Company <img class='float-end' src="../pics/eisai_logo.png" alt="Eisai Logo"></h3><h5>Eisai, Inc. <a href="https://us.eisai.com/" target="_blank">Website</a></h5>
                 </div>
                 <div class="col-sm-4">    
-                    <h3>Timeframe</h3><h5>September 2010 to December 2021</h5>
+                    <h3>Timeframe</h3><h5>Sep 2010 to Dec 2021</h5>
                 </div>
             </div>
             <div>
@@ -122,7 +122,7 @@
                     <h3>Company <img class='float-end' src="../pics/janssen_logo.jpg" alt="Eisai Logo" style="border-radius:100%;"></h3><h5> Janssen Pharmaceuticals <a href="https://www.janssen.com/" target="_blank">Website</a></h5>
                 </div>
                 <div class="col-sm-4">    
-                    <h3>Timeframe</h3><h5>September 2006 to September 2010</h5>
+                    <h3>Timeframe</h3><h5>Sep 2006 to Sep 2010</h5>
                 </div>
             </div>
             <div>
@@ -151,7 +151,7 @@
                     <h3>Company <img class='float-end' src="../pics/ipsdb_logo.gif" alt="IPS Logo"></h3><h5>Integrated Project Services <a href="https://www.ipsdb.com/" target="_blank">Website</a></h5>
                 </div>
                 <div class="col-sm-4">    
-                    <h3>Timeframe</h3><h5>February 2002 to September 2006</h5>
+                    <h3>Timeframe</h3><h5>Feb 2002 to Sep 2006</h5>
                 </div>
             </div>
             <div>
