fixed alignment glitches about blog

--- a/pages/about.html
+++ b/pages/about.html
@@ -62,7 +62,7 @@
             </div>
         </nav>
 
-        <div id='article1' class="container-fluid">
+        <div id='article1' class="container-fluid mx-auto">
                 <p>Hello!</p>
                 <p>My name is Pete Chu and I have been a professional in the Pharmaceutical industry for the past 20 years. My technical specialities include Facility Start-up, Equipment and System Validation, as well as Quality Engineering. </p>
                 <p>I have a bachelor's degree in Biological Sciences from the University of Delaware. My experience includes Validation Consulting with Integrated Project Services (IPS), as well as direct employment with Janssen (formerly Centocor, Johnson & Johnson), and Eisai, Inc. (formerly Morphotek).</p>
