blog typo exp nav cbp font fix

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -115,7 +115,7 @@
                                         <img class="img-fluid" src="../pics/magicBall/magicBall_globalVariables.png" alt="Screenshot of JavaScript showing the global variables for 2D ball movement.">
                                     </a>
                                 </div>
-                                <p>Image 3 shows the opening <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script" target="_blank">'script'</a> tag, which denotes the beginning of the JavaScript code in this file.  All the <a href='https://developer.mozilla.org/en-US/docs/Glossary/Global_variable' target='_blank'>global variables</a> for 2D ball movement are listed, including the 'ball' variable that is assigned to the HTMl <a href='https://developer.mozilla.org/en-US/docs/Web/API/Document/getElementById' target='_blank'>document element with the ID tag</a> of 'ball'.</p>
+                                <p>Image 3 shows the opening <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script" target="_blank">'script'</a> tag, which denotes the beginning of the JavaScript code in this file.  All the <a href='https://developer.mozilla.org/en-US/docs/Glossary/Global_variable' target='_blank'>global variables</a> for 2D ball movement are listed, including the 'ball' variable that is assigned to the HTML <a href='https://developer.mozilla.org/en-US/docs/Web/API/Document/getElementById' target='_blank'>document element with the ID tag</a> of 'ball'.</p>
                             </div>
                             <div class="col-sm-8">
                                 <div>
