--- a/pages/experience.html
+++ b/pages/experience.html
@@ -67,11 +67,11 @@
                     <h3>Company <img class='float-end' src="../pics/lenovainc_logo.gif" alt="LeNova Logo"></h3><h5>LeNova, Inc. <a href="https://www.lenovainc.com/" target="_blank">Website</a></h5>
                 </div>
                 <div class="col-sm-4">    
-                    <h3>Timeframe</h3><h5>Jan 2022 to Jul 2022</h5>
+                    <h3>Timeframe</h3><h5>Jan 2022 to Present</h5>
                 </div>
             </div>
             <div>
-                <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Web Developer</span>
+                <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Web Developer</span><span style="color:gray;"> (Contract)</span>
             </div>
             <div>
                 <span class="h3">Description</span>
