--- a/pages/experience.html
+++ b/pages/experience.html
@@ -76,7 +76,7 @@
             <div>
                 <span class="h3">Description</span>
             </div>
-            <p>LeNova, Inc. is a licensed engineering and technology solutions provider with a focus on the Life Sciences and Commercial industries.  LeNova, Inc. was established in 1997 and has extensive experience in the biopharmaceutical space.  I joined LeNova in 2022 to support business expansion initiatives and develop their website.</p>
+            <p>LeNova, Inc. is a engineering and technology solutions provider with a focus on the Life Sciences and Commercial industries.  LeNova, Inc. was established in 1997 and has extensive experience in the biopharmaceutical space.  I joined LeNova in 2022 to support business expansion initiatives and develop their website.</p>
             <p>My roles and responsibilities include:</p>
             <ul>
                <li>Research business goals, customers and their expected behavior.</li>
