--- a/pages/blog.html
+++ b/pages/blog.html
@@ -66,8 +66,8 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                     <button class="accordion-button bg-transparent" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                        <h5>Magic Ball Challenge</h5>
                         <h6>Blog Post #2</h6>
+                        <h5>Magic Ball Challenge</h5>
                     </button>
                 </h2>
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
@@ -79,7 +79,11 @@
                             </div>
                             <div class="col-sm-4">
                                 <div style="margin-top:5vw;">
-                                    Hello! This is my second blog post & discussion assignment from the MIT xPro Full Stack Coding Bootcamp.  In this Magic Ball challenge, we used HTML, CSS, and JavaScript to create a ball image and make it move.
+                                    <h6>
+                                        Hello! 
+                                    </h6>
+                                    This is my second blog post & discussion assignment from the MIT xPro Full Stack Coding Bootcamp.  
+                                    In this Magic Ball challenge, we used HTML, CSS, and JavaScript to create a ball image and make it move.
                                 </div>
                             </div>
                             <div class="row mx-auto" style="max-width:640px;">
@@ -248,8 +252,8 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                        <h5>Creating a Personal Website on GitHub</h5>
                         <h6>Blog Post #1</h6>
+                        <h5>Creating a Personal Website on GitHub</h5>
                     </button>
                 </h2>
                 <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse bg-transparent" aria-labelledby="panelsStayOpen-headingThree">
