more concise exp

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -70,8 +70,8 @@
                     <h3>Timeframe</h3><h5>Jan 2022 to Present</h5>
                 </div>
             </div>
-            <div>
-                <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Web Developer</span><span style="color:gray;"> (Contract)</span>
+            <div class="row">
+                <span class="h3 col-sm-3">Position</span><span class='h5 col-sm-9 px-3'style='color:white;'>Web Developer<span style="color:gray;"> (Contract)</span></span>
             </div>
             <div>
                 <span class="h3">Description</span>
@@ -84,6 +84,7 @@
                <li>Develop the website using HTML, CSS, and JavaScript.</li>
                <li>Ensure website is fully mobile and browser compatible.</li>
                <li>Testing of all features, website maintenance and updates.</li>
+               <li>Continuous Integration / Continuous Deployment (CI/CD) efforts.</li>
             </ul>
         </div>
 
@@ -96,8 +97,8 @@
                     <h3>Timeframe</h3><h5>Sep 2010 to Dec 2021</h5>
                 </div>
             </div>
-            <div>
-                <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Senior Quality Engineer</span>
+            <div class="row">
+                <span class="h3 col-sm-3">Position</span><span class='h5 px-3 col-sm-9'style='color:white;'>Senior Quality Engineer</span>
             </div>
             <div>
                 <span class="h3">Description</span>
@@ -105,14 +106,16 @@
             <p>Eisai is a research based human health care company that discovers, develops, and markets products throughout the world.  I started at Eisai when it was still known as Morphotek and I was initially hired as a Contract Senior Validation Specialist, but transitioned to a full time employee with their Quality Assurance organization in 2012.</p>
             <p>My roles and responsibilities included:</p>
             <ul>
-                <li>Quality Lead for the Quality Management Systems (QMS): Document Control, Validation, Facilities, Automation, Deviation Management, and Change Control.</li>
-                <li>Manage, mentor, and develop junior validation / quality staff.  Provide guidance on calibration, preventive maintenance, and process tolerance programs.</li>
+                <li>Quality Lead for: Document Control, Validation, Facilities, Automation, Deviation Management, and Change Control.</li>
+                <li>Manage, mentor, and develop junior validation / quality staff.</li>
+                <li>Provide guidance on calibration, preventive maintenance, and process tolerance programs.</li>
                 <li>Develop procedures to support Commercialization and Pilot Plant Commissioning / Qualification / Validation (CQV) program.</li>
-                <li>Lead Change Management Review Board includes: collaborating with stakeholders, requesting and proposing changes, assessing impact and establishing justification, establishing an implementation plan, execution and closure of implementation activities, and providing high-level summaries and metrics.</li>
-                <li>Lead Deviation Management Program, includes: publishing weeekly compliance updates, lead investigator for site deviations, mentored and trained junior staff on deviations and investigation writing, generated metrics and trends.</li>
-                <li>Lead and manage CQV contract/consulting firms, including their daily activities to successfully qualify and release equipment used in the manufacture of Bulk Drug Substance (BDS) and Antibody Drug Intermediate (ADI).</li>
+                <li>Meeting Leadership Skills: collaborating with stakeholders, requesting and proposing changes, assessing impact and establishing justification, establishing an implementation plan, execution and closure of implementation activities, and providing high-level summaries and metrics.</li>
+                <li>Led Change Management Review Board.</li>
+                <li>Led Deviation Management Program.</li>
+                <li>Led and managed Commissioning Qualification Validation contract/consulting firms.</li>
                 <li>Successfully support manufacturing facility and associated QMS documentation during Regulatory Inspections and Internal Audits.</li>
-                <li>Continuous Improvement accomplishments: Establishing a Controlled Drawing Process and Workflow, Enhancing Computerized Maintenance Management System (CMMS) to support routine validation maintenance activities, Establishing an Engineering Change Request (ECR) process to enhance the level of controls and prioritization of change type and resource utilization.</li>
+                <li>Responsible for site Continuous Improvement efforts.</li>
             </ul>
         </div>
 
@@ -125,8 +128,8 @@
                     <h3>Timeframe</h3><h5>Sep 2006 to Sep 2010</h5>
                 </div>
             </div>
-            <div>
-                <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Senior Validation Engineer</span>
+            <div class="row">
+                <span class="h3 col-sm-3">Position</span><span class='h5 col-sm-9 px-3'style='color:white;'>Senior Validation Engineer</span>
             </div>
             <div>
                 <span class="h3">Description</span><span class='h5 px-3'style='color:white;'></span>
@@ -154,8 +157,8 @@
                     <h3>Timeframe</h3><h5>Feb 2002 to Sep 2006</h5>
                 </div>
             </div>
-            <div>
-                <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Validation Specialist</span>
+            <div class="row">
+                <span class="h3 col-sm-3">Position</span><span class='h5 col-sm-9 px-3'style='color:white;'>Validation Specialist</span>
             </div>
             <div>
                 <span class="h3">Description</span>
