--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,9 +62,9 @@
         </nav>
 
         <div class="container-fluid myArticles">
-            <h1>Thanks for checking out my Projects.</h1>
+            <h1>Thanks for checking out my Projects!</h1>
             <hr style="color:transparent;">
-            <h3>There will be more to come, please visit again!</h3>
+            <h3>There will be more to come, please visit again.</h3>
         </div>
 
         <div class="row container-fluid justify-content-center">
