--- a/pages/experience.html
+++ b/pages/experience.html
@@ -84,7 +84,8 @@
                <li>Develop the website using HTML, CSS, and JavaScript.</li>
                <li>Ensure website is fully mobile and browser compatible.</li>
                <li>Testing of all features, website maintenance and updates.</li>
-               <li>Continuous Integration / Continuous Deployment (CI/CD) efforts.</li>
+               <li>Continuous Integration / Continuous Deployment (CI/CD).</li>
+               <li>Search Engine Optimization (SEO) and Google Lighthouse.</li>
             </ul>
         </div>
 
