--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -70,8 +70,8 @@
         </div>
 
         <figure class='animationFlipIn'>
-            <h2 style="letter-spacing:0.125rem;">stationInLife.<span style="color:purple;">replace</span>(<br>
-                <span style="color:black">__</span>'<span style="color:#00857c;">Pharmaceutical Engineer</span>',<br>
+            <h2 style="letter-spacing:0.125rem;"><span style="color: silver">stationInLife</span>.<span style="color:darkorange;">replace</span>(<br>
+                <span style="color:black">__</span>'<span style="color: #00857c;">Pharmaceutical Engineer</span>',<br>
                 <span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
         </figure>
         
