footer logo alts

--- a/pages/construction.html
+++ b/pages/construction.html
@@ -71,8 +71,8 @@
                 <span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
             </p>
             <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
-            <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="GitHub Icon"></a>
-            <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo" src="../pics/linkedin_white.png" alt="GitHub Icon"></a>
+            <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
+            <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo" src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
         </footer>
 
         <!-- JS Libraries: Bootstrap -->
