--- a/pages/projects.html
+++ b/pages/projects.html
@@ -69,6 +69,15 @@
 
         <div class="row container-fluid justify-content-center">
             <div class="card col-sm-4" style="width: 18rem;">
+                <img src="https://codetracklift.github.io/pacman/pacman_icon.ico" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Pac Man Project</h5>
+                    <p class="card-text">This is my first project with the <span>MIT xPro Full Stack Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
+                    <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile inputs! Please note that screen re-sizing mid-play may result in strange boundry responses.</p>
+                    <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Click Me</a>
+                </div>
+            </div>
+            <div class="card col-sm-4" style="width: 18rem;">
                 <img src="https://codetracklift.github.io/lmnophoto/pics/mermaid_camera.gif" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">L.M.N.O. Photography</h5>
