reformatting for 2 space tabs

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,134 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-2">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
-        <!-- Bootstrap Link -->
-        <link rel="stylesheet" href="../libraries/bootstrap.min.css">
+<head>
+  <meta charset="UTF-2">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Font CSS Links -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
-        <!-- Scroll Magic JS -->
-        <script src="../libraries/ScrollMagic.min.js"></script>
+  <!-- Bootstrap Link -->
+  <link rel="stylesheet" href="../libraries/bootstrap.min.css">
 
-        <!-- My CSS & JS -->
-        <link rel="stylesheet" href="../css/global.css">
-        <link rel="stylesheet" href="../css/navbar.css">
-        <link rel="stylesheet" href="../css/projects.css">
-        <script src='../js/index.js' defer></script>
-        <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
+  <!-- Font CSS Links -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
 
-        <title>codeByPete</title>
-    </head>
+  <!-- Scroll Magic JS -->
+  <script src="../libraries/ScrollMagic.min.js"></script>
 
-    <body>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <img src='../pics/pharma2code_icon.gif' style="width:2.5rem;">
-                </button>
-                <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span></h3>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../pages/welcome.html">Welcome</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../pages/about.html">About Me</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/blog.html">My Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/experience.html">Experience</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../pages/projects.html">Projects</a>
-                        </li>
-                    </ul>
-                    <!-- <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form> -->
-                </div>
-            </div>
-        </nav>
+  <!-- My CSS & JS -->
+  <link rel="stylesheet" href="../css/global.css">
+  <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/projects.css">
+  <script src='../js/index.js' defer></script>
+  <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-        <div class="container-fluid myArticles">
-            <h1>Thanks for checking out my Projects!</h1>
-            <hr style="color:transparent;">
-            <h3>There will be more to come, please visit again.</h3>
-        </div>
+  <title>codeByPete</title>
+</head>
 
-        <div class="row container-fluid justify-content-center">
-            <div class="card col-sm-4" style="width: 18rem;">
-                <img src="https://codetracklift.github.io/pacman/pacman_icon.ico" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Pac Man Project</h5>
-                    <p class="card-text">This is my first project with the <span>MIT xPro Full Stack Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
-                    <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile inputs! Please note that screen re-sizing mid-play may result in strange boundry responses.</p>
-                    <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Click Me</a>
-                </div>
-            </div>
-            <div class="card col-sm-4" style="width: 18rem;">
-                <img src="https://codetracklift.github.io/lmnophoto/pics/mermaid_camera.gif" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">L.M.N.O. Photography</h5>
-                    <p class="card-text">Built a <span>landing page</span> for a Photographer who is based in Philadelphia.  She specializes in weddings, engagements, maternity sessions, and other events!</p>
-                    <p class="card-text">This was my <span>first website</span> using Bootstrap and ScrollMagic.</p>
-                    <a href="https://codetracklift.github.io/lmnophoto/" class="btn btn-secondary" target="_blank">Click Me</a>
-                </div>
-            </div>
-            <div class="card col-sm-4" style="width:18rem;">
-                <img src="https://codetracklift.github.io/odin-calc/favicon.ico" class="card-img-top" alt="Calculator image">
-                <div class="card-body">
-                    <h5 class="card-title">JavaScript Calculator</h5>
-                    <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of The Odin Project Foundations course.</p>
-                    <p class="card-text">Accepts mouse and key inputs, and makes drum sound effects!</p>
-                    <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Click Me</a>
-                </div>
-            </div>
-            <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/etch-a-sketch.jpg" class="card-img-top" alt="Screenshot of etch-a-sketch project.">
-                <div class="card-body">
-                    <h5 class="card-title">Etch-A-Sketch</h5>
-                    <p class="card-text">My <span>second JavaScript Project</span>, this was completed as part of The Odin Project Foundations course.</p>
-                    <p class="card-text">Accepts mouse and key inputs, and the pixel resolution can be resized!</p>
-                    <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary" target="_blank">Click Me</a>
-                </div>
-            </div>
-            <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/rock-paper-scissors.png" class="card-img-top" alt="Screenshot of a Rock, Paper, Scissors project.">
-                <div class="card-body">
-                    <h5 class="card-title">Rock, Paper, Scissors</h5>
-                    <p class="card-text">My <span>first JavaScript project</span>, this was completed as part of The Odin Project Foundations course.</p>
-                    <p class="card-text">Accepts text and mouse inputs with text validation and results tracking!</p>
-                    <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Click Me</a>
-                </div>
-            </div>
-        </div>
-        
-        <footer class="container-fluid">
-            <p>Copyright © 
-                <script>
-                    document.write(new Date().getFullYear())
-                </script> 
-                <img class='d-none d-sm-inline' src="../pics/pharma2code_icon.gif" style='height: 2rem;' alt="My 'Pharma 2 Code' Logo.">
-                <span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
-            </p>
-            <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
-            <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
-            <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo" src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
-        </footer>
+<body>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <img src='../pics/pharma2code_icon.gif' style="width:2.5rem;">
+      </button>
+      <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span
+          style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
+      </h3>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../pages/welcome.html">Welcome</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../pages/about.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/blog.html">My Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/experience.html">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="../pages/projects.html">Projects</a>
+          </li>
+        </ul>
+        <!-- <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+              </form> -->
+      </div>
+    </div>
+  </nav>
 
-        <!-- JS Libraries: Bootstrap -->
-        <script src="../libraries/bootstrap.min.js"></script>
-    </body>
+  <div class="container-fluid myArticles">
+    <h1>Thanks for checking out my Projects!</h1>
+    <hr style="color:transparent;">
+    <h3>There will be more to come, please visit again.</h3>
+  </div>
+
+  <div class="row container-fluid justify-content-center">
+    <div class="card col-sm-4" style="width: 18rem;">
+      <img src="https://codetracklift.github.io/pacman/pacman_icon.ico" class="card-img-top" alt="Pac Man image" style="padding:2rem;margin:-2rem 0;">
+      <div class="card-body">
+        <h5 class="card-title">Pac Man Project</h5>
+        <p class="card-text">This is my first project with the <span>MIT xPro Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
+        <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile inputs! Screen re-sizing mid-play may result in strange boundry responses.</p>
+        <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Click Me</a>
+      </div>
+    </div>
+    <div class="card col-sm-4" style="width: 18rem;">
+      <img src="https://codetracklift.github.io/lmnophoto/pics/mermaid_camera.gif" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">L.M.N.O. Photography</h5>
+        <p class="card-text">Built a <span>landing page</span> for a Photographer who is based in Philadelphia. She specializes in weddings, engagements, maternity sessions, and other events!</p>
+        <p class="card-text">This was my <span>first website</span> using Bootstrap and ScrollMagic.</p>
+        <a href="https://codetracklift.github.io/lmnophoto/" class="btn btn-secondary" target="_blank">Click Me</a>
+      </div>
+    </div>
+    <div class="card col-sm-4" style="width:18rem;">
+      <img src="https://codetracklift.github.io/odin-calc/favicon.ico" class="card-img-top" alt="Calculator image">
+      <div class="card-body">
+        <h5 class="card-title">JavaScript Calculator</h5>
+        <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of The Odin Project Foundations course.</p>
+        <p class="card-text">Accepts mouse and key inputs, and makes drum sound effects!</p>
+        <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Click Me</a>
+      </div>
+    </div>
+    <div class="card col-sm-4" style="width:18rem;">
+      <img src="../pics/etch-a-sketch.jpg" class="card-img-top" alt="Screenshot of etch-a-sketch project.">
+      <div class="card-body">
+        <h5 class="card-title">Etch-A-Sketch</h5>
+        <p class="card-text">My <span>second JavaScript Project</span>, this was completed as part of The Odin Project Foundations course.</p>
+        <p class="card-text">Accepts mouse and key inputs, and the pixel resolution can be resized!</p>
+        <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary" target="_blank">Click Me</a>
+      </div>
+    </div>
+    <div class="card col-sm-4" style="width: 18rem;">
+      <img src="../pics/rock-paper-scissors.png" class="card-img-top"
+        alt="Screenshot of a Rock, Paper, Scissors project.">
+      <div class="card-body">
+        <h5 class="card-title">Rock, Paper, Scissors</h5>
+        <p class="card-text">My <span>first JavaScript project</span>, this was completed as part of The Odin Project Foundations course.</p>
+        <p class="card-text">Accepts text and mouse inputs with text validation and results tracking!</p>
+        <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Click
+          Me</a>
+      </div>
+    </div>
+    <div class="card col-sm-4" style="width: 18rem;">
+      <img src="https://codetracklift.github.io/odin-landingpage/img1.jpg" class="card-img-top"
+        alt="Screenshot of a Rock, Paper, Scissors project.">
+      <div class="card-body">
+        <h5 class="card-title">Landingpage Project</h5>
+        <p class="card-text">My <span>first Landingpage Project</span>, this was completed as part of The Odin Project Foundations course.</p>
+        <p class="card-text">This was made using vanilla HTML and CSS after about two weeks of self-learning.</p>
+        <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary" target="'_blank">Click
+          Me</a>
+      </div>
+    </div>
+  </div>
+
+  <footer class="container-fluid">
+    <p>Copyright ©
+      <script>
+        document.write(new Date().getFullYear())
+      </script>
+      <img class='d-none d-sm-inline' src="../pics/pharma2code_icon.gif" style='height: 2rem;'
+        alt="My 'Pharma 2 Code' Logo.">
+      <span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
+    </p>
+    <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo"
+        src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
+    <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo"
+        src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
+    <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo"
+        src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
+  </footer>
+
+  <!-- JS Libraries: Bootstrap -->
+  <script src="../libraries/bootstrap.min.js"></script>
+</body>
+
 </html>
