--- a/pages/about.html
+++ b/pages/about.html
@@ -1,94 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
-        <!-- Bootstrap Link -->
-        <link rel="stylesheet" href="../libraries/bootstrap.min.css">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Font CSS Links -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
+
+  <!-- Bootstrap Link -->
+  <link rel="stylesheet" href="../libraries/bootstrap.min.css">
+
+  <!-- Font CSS Links -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
 
 
-        <!-- Scroll Magic JS -->
-        <script src="../libraries/ScrollMagic.min.js"></script>
+  <!-- Scroll Magic JS -->
+  <script src="../libraries/ScrollMagic.min.js"></script>
 
-        <!-- My CSS & JS -->
-        <link rel="stylesheet" href="../css/global.css">
-        <link rel="stylesheet" href="../css/navbar.css">
-        <link rel="stylesheet" href="../css/about.css">
-        <script src='../js/index.js' defer></script>
-        <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
+  <!-- My CSS & JS -->
+  <link rel="stylesheet" href="../css/global.css">
+  <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/about.css">
+  <script src='../js/index.js' defer></script>
+  <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-        <title>codeByPete</title>
-    </head>
+  <title>codeByPete</title>
+</head>
 
-    <body>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <img src='../pics/pharma2code_icon.gif' style="width:2.5rem;">
-                </button>
-                <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span></h3>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../pages/welcome.html">Welcome</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../pages/about.html">About Me</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/blog.html">My Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/experience.html">Experience</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/projects.html">Projects</a>
-                        </li>
-                    </ul>
-                    <!-- <form class="d-flex">
+<body>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <img src='../pics/pharma2code_icon.gif' style="width:2.5rem;">
+      </button>
+      <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span
+          style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
+      </h3>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../pages/welcome.html">Welcome</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../pages/about.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/blog.html">My Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/experience.html">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/projects.html">Projects</a>
+          </li>
+        </ul>
+        <!-- <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form> -->
-                </div>
-            </div>
-        </nav>
+      </div>
+    </div>
+  </nav>
 
-        <div id='article1' class="container-fluid mx-auto">
-                <p>Hello!</p>
-                <p>My name is Pete Chu and I have been a professional in the Pharmaceutical industry for the past 20 years. My technical specialities include Facility Start-up, Equipment and System Validation, as well as Quality Engineering. </p>
-                <p>I have a bachelor's degree in Biological Sciences from the University of Delaware. My experience includes Validation Consulting with Integrated Project Services (IPS), as well as direct employment with Janssen (formerly Centocor, Johnson & Johnson), and Eisai, Inc. (formerly Morphotek).</p>
-                <p>With Janssen and Eisai, I was responsible for leading equipment and system qualification efforts as a Senior Validation Engineer. In 2012, I transitioned to a Senior Quality Engineer role within Eisai and was responsible for site metrics, quality dispositions, change controls, and leading investigations. In 2017, I was managing the GMP Document Control and Quality Engineering teams.</p> 
-                <p>In December of 2021, I stumbled upon freeCodeCamp.org and rediscovered my childhood passion of coding and technology. I am currently at the midpoint of my career and have decided to part ways with Eisai in order to pursue a career change that is in line with a personal passion.</p>
-                <p>I look forward to working with you on this exciting part of my journey!</p>
-                <p style="text-align:end;font-style:italic;padding:0;color:white;"><img src="../pics/profilepic.jpg" alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 4rem -3.5rem 0;">Best Regards,</p>
-                <p style="text-align:end;font-style:italic;padding:0;color:white;">Pete Chu, Feb 2022</p>
-                <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
-            </div>
-        </div>
-        
-        <footer class="container-fluid">
-            <p>Copyright © 
-                <script>
-                    document.write(new Date().getFullYear())
-                </script> 
-                <img class='d-none d-sm-inline' src="../pics/pharma2code_icon.gif" style='height: 2rem;' alt="My 'Pharma 2 Code' Logo.">
-                <span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
-            </p>
-            <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
-            <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
-            <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo" src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
-        </footer>
+  <div id='article1' class="container-fluid mx-auto">
+    <p>Hello!</p>
+    <p>My name is Pete Chu and I have been a professional in the Pharmaceutical industry for the past 20 years. My
+      technical specialities include Facility Start-up, Equipment and System Validation, as well as Quality Engineering.
+    </p>
+    <p>I have a bachelor's degree in Biological Sciences from the University of Delaware. My experience includes
+      Validation Consulting with Integrated Project Services (IPS), as well as direct employment with Janssen (formerly
+      Centocor, Johnson & Johnson), and Eisai, Inc. (formerly Morphotek).</p>
+    <p>With Janssen and Eisai, I was responsible for leading equipment and system qualification efforts as a Senior
+      Validation Engineer. In 2012, I transitioned to a Senior Quality Engineer role within Eisai and was responsible
+      for site metrics, quality dispositions, change controls, and leading investigations. In 2017, I was managing the
+      GMP Document Control and Quality Engineering teams.</p>
+    <p>In December of 2021, I stumbled upon freeCodeCamp.org and rediscovered my childhood passion of coding and
+      technology. I am currently at the midpoint of my career and have decided to part ways with Eisai in order to
+      pursue a career change that is in line with a personal passion.</p>
+    <p>I look forward to working with you on this exciting part of my journey!</p>
+    <p style="text-align:end;font-style:italic;padding:0;color:white;"><img src="../pics/profilepic.jpg"
+        alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 4rem -3.5rem 0;">Best Regards,</p>
+    <p style="text-align:end;font-style:italic;padding:0;color:white;">Pete Chu, Feb 2022</p>
+    <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
+  </div>
+  </div>
 
-        <!-- JS Libraries: Bootstrap -->
-        <script src="../libraries/bootstrap.min.js"></script>
-    </body>
+  <footer class="container-fluid">
+    <p>Copyright ©
+      <script>
+        document.write(new Date().getFullYear())
+      </script>
+      <img class='d-none d-sm-inline' src="../pics/pharma2code_icon.gif" style='height: 2rem;'
+        alt="My 'Pharma 2 Code' Logo.">
+      <span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
+    </p>
+    <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo"
+        src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
+    <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo"
+        src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
+    <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo"
+        src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
+  </footer>
+
+  <!-- JS Libraries: Bootstrap -->
+  <script src="../libraries/bootstrap.min.js"></script>
+</body>
+
 </html>
