--- a/pages/projects.html
+++ b/pages/projects.html
@@ -127,7 +127,7 @@
       <div class="card-body">
         <h5 class="card-title">Landingpage Project</h5>
         <p class="card-text">My <span>first Landingpage Project</span>, this was completed as part of The Odin Project Foundations course.</p>
-        <p class="card-text">This was made using vanilla HTML and CSS after about two weeks of self-learning.</p>
+        <p class="card-text">This was made using vanilla HTML and CSS after completing the <a href="https://www.freecodecamp.org/learn/responsive-web-design/">Responsive Web Design</a> course at freeCodeCamp.org.</p>
         <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary" target="'_blank">Click
           Me</a>
       </div>
