--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,7 +79,7 @@
       <div class="card-body">
         <h5 class="card-title">Pac Man Project</h5>
         <p class="card-text">This is my first project with the <span>MIT xPro Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
-        <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile inputs! Screen re-sizing mid-play may result in strange boundry responses.</p>
+        <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs!</p>
         <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Click Me</a>
       </div>
     </div>
