--- a/pages/projects.html
+++ b/pages/projects.html
@@ -75,7 +75,7 @@
 
   <div class="row container-fluid justify-content-center">
     <div class="card col-sm-4" style="width: 18rem;">
-      <img src="https://codetracklift.github.io/pacman/pacman_icon.ico" class="card-img-top mx-auto" alt="Pac Man image" style="width:10rem;">
+      <img src="https://codetracklift.github.io/pacman/pacman_icon.ico" class="card-img-top mx-auto py-4" alt="Pac Man image" style="width:10rem;">
       <div class="card-body">
         <h5 class="card-title">Pac Man Project</h5>
         <p class="card-text">This is my first project with the <span>MIT xPro Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
@@ -84,16 +84,16 @@
       </div>
     </div>
     <div class="card col-sm-4" style="width: 18rem;">
-      <img src="https://codetracklift.github.io/lmnophoto/pics/mermaid_camera.gif" class="card-img-top" alt="...">
+      <img src="https://codetracklift.github.io/lmnophoto/pics/mermaid_camera.gif" class="card-img-top py-2" alt="...">
       <div class="card-body">
         <h5 class="card-title">L.M.N.O. Photography</h5>
-        <p class="card-text">Built a <span>landing page</span> for a Photographer who is based in Philadelphia. She specializes in weddings, engagements, maternity sessions, and other events!</p>
+        <p class="card-text">Built a <span>landing page</span> for a Photographer who is based in Philadelphia.</p>
         <p class="card-text">This was my <span>first website</span> using Bootstrap and ScrollMagic.</p>
         <a href="https://codetracklift.github.io/lmnophoto/" class="btn btn-secondary" target="_blank">Click Me</a>
       </div>
     </div>
     <div class="card col-sm-4" style="width:18rem;">
-      <img src="https://codetracklift.github.io/odin-calc/favicon.ico" class="card-img-top" alt="Calculator image">
+      <img src="https://codetracklift.github.io/odin-calc/favicon.ico" class="card-img-top px-4" alt="Calculator image">
       <div class="card-body">
         <h5 class="card-title">JavaScript Calculator</h5>
         <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of The Odin Project Foundations course.</p>
@@ -102,7 +102,7 @@
       </div>
     </div>
     <div class="card col-sm-4" style="width:18rem;">
-      <img src="../pics/etch-a-sketch.jpg" class="card-img-top" alt="Screenshot of etch-a-sketch project.">
+      <img src="../pics/etch-a-sketch.jpg" class="card-img-top py-4" alt="Screenshot of etch-a-sketch project.">
       <div class="card-body">
         <h5 class="card-title">Etch-A-Sketch</h5>
         <p class="card-text">My <span>second JavaScript Project</span>, this was completed as part of The Odin Project Foundations course.</p>
