pacman icon link fix

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -75,7 +75,7 @@
 
   <div class="row container-fluid justify-content-center">
     <div class="card col-sm-4" style="width: 18rem;">
-      <img src="https://codetracklift.github.io/pacman/pacman_icon.ico" class="card-img-top mx-auto py-4" alt="Pac Man image" style="width:10rem;">
+      <img src="https://codetracklift.github.io/pacman/pics/pacman_icon.ico" class="card-img-top mx-auto py-4" alt="Pac Man image" style="width:10rem;">
       <div class="card-body">
         <h5 class="card-title">Pac Man Project</h5>
         <p class="card-text">This is my first project with the <span>MIT xPro Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
