--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,7 +79,7 @@
       <div class="card-body">
         <h5 class="card-title">Pac Man Project</h5>
         <p class="card-text">This is my first project with the <span>MIT xPro Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
-        <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs!</p>
+        <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs!  See <a href='./blog.html#blog3'>Blog Post</a>.</p>
         <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Click Me</a>
       </div>
     </div>
@@ -88,7 +88,7 @@
       <div class="card-body">
         <h5 class="card-title">L.M.N.O. Photography</h5>
         <p class="card-text">Built a <span>landing page</span> for a Photographer who is based in Philadelphia.</p>
-        <p class="card-text">This was my <span>first website</span> using Bootstrap and ScrollMagic.</p>
+        <p class="card-text">This was my <span>first website</span> using <a href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/" target="_blank">ScrollMagic</a>.</p>
         <a href="https://codetracklift.github.io/lmnophoto/" class="btn btn-secondary" target="_blank">Click Me</a>
       </div>
     </div>
@@ -96,7 +96,7 @@
       <img src="https://codetracklift.github.io/odin-calc/favicon.ico" class="card-img-top px-4" alt="Calculator image">
       <div class="card-body">
         <h5 class="card-title">JavaScript Calculator</h5>
-        <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of The Odin Project Foundations course.</p>
+        <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">Accepts mouse and key inputs, and makes drum sound effects!</p>
         <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Click Me</a>
       </div>
@@ -105,7 +105,7 @@
       <img src="../pics/etch-a-sketch.jpg" class="card-img-top py-4" alt="Screenshot of etch-a-sketch project.">
       <div class="card-body">
         <h5 class="card-title">Etch-A-Sketch</h5>
-        <p class="card-text">My <span>second JavaScript Project</span>, this was completed as part of The Odin Project Foundations course.</p>
+        <p class="card-text">My <span>second JavaScript Project</span>, this was completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">Accepts mouse and key inputs, and the pixel resolution can be resized!</p>
         <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary" target="_blank">Click Me</a>
       </div>
@@ -115,7 +115,7 @@
         alt="Screenshot of a Rock, Paper, Scissors project.">
       <div class="card-body">
         <h5 class="card-title">Rock, Paper, Scissors</h5>
-        <p class="card-text">My <span>first JavaScript project</span>, this was completed as part of The Odin Project Foundations course.</p>
+        <p class="card-text">My <span>first JavaScript project</span>, this was completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">Accepts text and mouse inputs with text validation and results tracking!</p>
         <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Click
           Me</a>
@@ -126,8 +126,8 @@
         alt="Screenshot of a Rock, Paper, Scissors project.">
       <div class="card-body">
         <h5 class="card-title">Landingpage Project</h5>
-        <p class="card-text">My <span>first Landingpage Project</span>, this was completed as part of The Odin Project Foundations course.</p>
-        <p class="card-text">This was made using vanilla HTML and CSS after completing the <a href="https://www.freecodecamp.org/learn/responsive-web-design/" target="_blank">Responsive Web Design</a> course at freeCodeCamp.org.</p>
+        <p class="card-text">My <span>first Landingpage Project</span>, this was completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
+        <p class="card-text">This was made using vanilla HTML and CSS after completing the <a href="https://www.freecodecamp.org/learn/responsive-web-design/" target="_blank">Responsive Web Design</a> course at <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp.org</a>.</p>
         <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary" target="'_blank">Click
           Me</a>
       </div>
