--- a/pages/blog.html
+++ b/pages/blog.html
@@ -161,8 +161,9 @@
           </div>
           <div class="container-fluid row">
             <div class="col-sm-8">
+              <h6 class="text-center">Watch Video</h6>
               <iframe class='ratio ratio-4x3' width="420" height="315"
-              src="https://youtube.com/embed/iOKK8Q2unxE?&autoplay=1&mute=1" frameborder="0" allowfullscreen>
+              src="https://youtube.com/embed/iOKK8Q2unxE?&autoplay=0&mute=1" frameborder="0" allowfullscreen>
               </iframe>
             </div>
             <div class="col-sm-4 my-auto text-center">
