--- a/pages/projects.html
+++ b/pages/projects.html
@@ -77,19 +77,19 @@
     <div class="card col-sm-4" style="width: 18rem;">
       <img src="https://codetracklift.github.io/pacman/pics/pacman_icon.ico" class="card-img-top mx-auto py-4" alt="Pac Man image" style="width:10rem;">
       <div class="card-body">
-        <h5 class="card-title">Pac Man Project</h5>
-        <p class="card-text">This is my first project with the <span>MIT xPro Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
+        <h5 class="card-title">Pac-Man Mini-Game</h5>
+        <p class="card-text">This is my first project with the <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
         <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs!  See <a href='./blog.html#blog3'>Blog Post</a>.</p>
-        <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Click Me</a>
+        <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play Me</a>
       </div>
     </div>
     <div class="card col-sm-4" style="width: 18rem;">
       <img src="https://codetracklift.github.io/lmnophoto/pics/mermaid_camera.gif" class="card-img-top py-2" alt="...">
       <div class="card-body">
         <h5 class="card-title">L.M.N.O. Photography</h5>
-        <p class="card-text">Built a <span>landing page</span> for a Photographer who is based in Philadelphia.</p>
+        <p class="card-text">Built <span>landing page</span> <a href="https://www.lmnophoto.biz" target="_blank">lmnophoto.biz</a> for a Photographer who specializes in weddings and events!</p>
         <p class="card-text">This was my <span>first website</span> using <a href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/" target="_blank">ScrollMagic</a>.</p>
-        <a href="https://codetracklift.github.io/lmnophoto/" class="btn btn-secondary" target="_blank">Click Me</a>
+        <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Me</a>
       </div>
     </div>
     <div class="card col-sm-4" style="width:18rem;">
@@ -98,7 +98,7 @@
         <h5 class="card-title">JavaScript Calculator</h5>
         <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">Accepts mouse and key inputs, and makes drum sound effects!</p>
-        <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Click Me</a>
+        <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Do Math</a>
       </div>
     </div>
     <div class="card col-sm-4" style="width:18rem;">
@@ -107,7 +107,7 @@
         <h5 class="card-title">Etch-A-Sketch</h5>
         <p class="card-text">My <span>second JavaScript Project</span>, this was completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">Accepts mouse and key inputs, and the pixel resolution can be resized!</p>
-        <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary" target="_blank">Click Me</a>
+        <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary" target="_blank">Draw Something</a>
       </div>
     </div>
     <div class="card col-sm-4" style="width: 18rem;">
@@ -117,8 +117,7 @@
         <h5 class="card-title">Rock, Paper, Scissors</h5>
         <p class="card-text">My <span>first JavaScript project</span>, this was completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">Accepts text and mouse inputs with text validation and results tracking!</p>
-        <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Click
-          Me</a>
+        <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Play Me</a>
       </div>
     </div>
     <div class="card col-sm-4" style="width: 18rem;">
@@ -128,7 +127,7 @@
         <h5 class="card-title">Landingpage Project</h5>
         <p class="card-text">My <span>first Landingpage Project</span>, this was completed as part of <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.</p>
         <p class="card-text">This was made using vanilla HTML and CSS after completing the <a href="https://www.freecodecamp.org/learn/responsive-web-design/" target="_blank">Responsive Web Design</a> course at <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp.org</a>.</p>
-        <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary" target="'_blank">Click
+        <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary" target="'_blank">Visit
           Me</a>
       </div>
     </div>
