blog3 heading my-4

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -82,7 +82,7 @@
         <div class="accordion-body">
           <div class="'container-fluid row">
             <div class="col-sm-8">
-              <div style="margin-top:5vw;">
+              <div class='my-4' style="">
                 <h4 class="text-center">Hello Again!</h4>
                 <div class="h6">
                   Welcome to my third blog post & discussion assignment from the <span style="color:white;">MIT xPro Full Stack Coding Bootcamp</span>. 
